--- a/Application/index.html
+++ b/Application/index.html
@@ -20,23 +20,36 @@
 
 <body ng-app="phonebookApp">
   <div ng-controller="phonebookController">
-    <h1>Phonebook CRUD</h1>
+    <h1 class="alert alert-info" role="alert">Phonebook CRUD</h1>
     <table class="table">
-      <thead class="thead-dark">
+      <thead class="thead-light">
         <tr>
-          <th scope="col">
+          <th scope="col" nowrap>
             Name
+            <input type="checkbox" ng-model="filterName" />
           </th>
-          <th scope="col">
+          <th scope="col" nowrap>
             Phone Number
+            <input type="checkbox" ng-model="filterPhoneNumber" />
           </th>
-          <th scope="col">
+          <th scope="col" nowrap>
             Actions
+            <input type="checkbox" ng-model="filterKey" />
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <input type="text" ng-show="filterName" ng-model="search.name" />
+          </th>
+          <th>
+            <input type="text" ng-show="filterPhoneNumber" ng-model="search.tel" />
+          </th>
+          <th>
           </th>
         </tr>
       </thead>
       <tbody>
-        <tr ng-repeat="contact in data">
+        <tr ng-repeat="contact in data | filter:search">
           <td>
             {{contact.name}}
           </td>
@@ -45,8 +58,24 @@
           </td>
           <td>
             actions
+            <button type="button" ng-click="deleteContact(contact._id)" class="btn btn-danger">Remove</button>
+            <button type="button" class="btn btn-info">Edit</button>
+            
           </td>
         </tr>
+        <form ng-submit="addContact(newName,newTel)">
+
+          <td>
+            <input type="text" ng-model="newName" />
+          </td>
+          <td>
+            <input type="text" ng-model="newTel" />
+          </td>
+          <td>
+            <button type="submit" class="btn btn-primary">Add</button>
+          </td>
+        </form>
+
       </tbody>
     </table>
   </div>
